# HOI-CLI-VIEWER

./: Cargo.toml  README.md
New/: console_logging.py  facing_data.py  main.py  request_handler.py
Old-Rust/src/: console_logger.rs  facing_data.rs  main.rs  types.rs
src/: client.rs  console_logger.rs  facing_data.rs  main.rs  types.rs
