[package]
name = "HOI-CLI"
version = "0.1.0"
authors = ["RonaldColyar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.13.0"
url = "2.2.2"
chrono = "0.4.0"
gpio = "0.4.1"
serde_json = "0.9.10"
ansi_term = "0.12"